[package]
name = "many-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "many"
path = "src/main.rs"

[dependencies]
many = { path = "../many" }
many-client = { path = "../many-client" }
anyhow = "1.0.57"
base64 = "0.13.0"
cbor-diag = "0.1.8"
clap = { version = "3.0.0-rc.9", features = [ "derive" ] }
coset = "0.3"
hex = "0.4.3"
minicbor = { version = "0.12.0", features = ["derive", "half", "std"] }
rpassword = "6.0"
tracing = "0.1.29"
tracing-subscriber = "0.2.24"
tokio = { version = "1.12.0", features = [ "full" ] }
url = "2.2.2"
