[package]
name = "many-client-macros"
version = "0.2.6" # managed by release.sh
edition = "2021"
description = "`many-client` procedural macro."
license-file = "../../LICENSE"
homepage = "https://liftedinit.org/"
repository = "https://github.com/liftedinit/many-rs.git"
authors = ["The Lifted Initiative <crates@liftedinit.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.17", features = ["full", "extra-traits"] }
quote = "1.0.28"
proc-macro2 = "1.0.66"
